# vgrep

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  config.example  config.yaml.example  help.txt  stack.yaml  vgrep.cabal
app/: Main.hs
app/Vgrep/: App.hs  Event.hs  Widget.hs
app/Vgrep/Widget/: HorizontalSplit.hs  List.hs  Pager.hs  Results.hs  Type.hs
debian/: changelog  control  copyright  haskell-vgrep-utils.install  rules  watch
src/Control/Concurrent/STM/: TPQueue.hs
src/Control/Lens/: Compat.hs
src/Control/Monad/State/: Extended.hs  Lift.hs
src/Pipes/Concurrent/: PQueue.hs
src/Vgrep/: Ansi.hs  App.hs  Command.hs  Commands.hs  Config.hs  EdLine.hs  Environment.hs  Event.hs  Key.hs  KeybindingMap.hs  Keys.hs  Parser.hs  Results.hs  Search.hs  Text.hs  Type.hs  Widget.hs
src/Vgrep/Ansi/: Parser.hs  Type.hs  Types.hs
src/Vgrep/Ansi/Vty/: Attributes.hs
src/Vgrep/App/: Internal.hs
src/Vgrep/EdLine/Command/: Parser.hs
src/Vgrep/Environment/: Config.hs
src/Vgrep/Environment/Config/: Monoid.hs  Sources.hs
src/Vgrep/Environment/Config/Sources/: Env.hs  File.hs
src/Vgrep/Results/: Buffer.hs
src/Vgrep/System/: Grep.hs
src/Vgrep/Widget/: EdLine.hs  EdLine.hs.orig  HorizontalSplit.hs  Layout.hs  Pager.hs  Results.hs  Type.hs
src/Vgrep/Widget/HorizontalSplit/: Internal.hs
src/Vgrep/Widget/Layout/: Internal.hs
src/Vgrep/Widget/Pager/: Internal.hs
src/Vgrep/Widget/Results/: Buffer.hs  Internal.hs
test/: Doctest.hs  Spec.hs
test/Data/Text/: Testable.hs
test/Data/Text/Lazy/: Testable.hs
test/Test/: Case.hs
test/Test/Vgrep/: Widget.hs
test/Test/Vgrep/Widget/: Pager.hs  Results.hs
test/Vgrep/Environment/: Testable.hs
test/Vgrep/Type/: Testable.hs
test/Vgrep/Widget/Pager/: Testable.hs
test/Vgrep/Widget/Results/: Testable.hs
