name:                vgrep
version:             0.1.3.0
synopsis:            A pager for grep
description:         Please see README.md
homepage:            http://github.com/fmthoma/vgrep#readme
license:             BSD3
license-file:        LICENSE
author:              Franz Thoma
maintainer:          franz.thoma@tngtech.com
copyright:           2016 Franz Thoma
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  LambdaCase
                     , MultiWayIf
  exposed-Modules:     Control.Monad.State.Extended
                     , Vgrep.App
                     , Vgrep.Event
                     , Vgrep.Environment
                     , Vgrep.Environment.Config
                     , Vgrep.Parser
                     , Vgrep.Results
                     , Vgrep.System.Grep
                     , Vgrep.Text
                     , Vgrep.Type
                     , Vgrep.Widget
                     , Vgrep.Widget.HorizontalSplit
                     , Vgrep.Widget.HorizontalSplit.Internal
                     , Vgrep.Widget.Pager
                     , Vgrep.Widget.Pager.Internal
                     , Vgrep.Widget.Results
                     , Vgrep.Widget.Results.Internal
                     , Vgrep.Widget.Type
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , containers
                     , lens
                     , lifted-base
                     , mtl
                     , mmorph
                     , pipes
                     , pipes-concurrency
                     , process
                     , text
                     , transformers
                     , unix
                     , vty >= 5.4.0
  default-language:    Haskell2010

executable vgrep
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  LambdaCase
                     , MultiWayIf
  build-depends:       base
                     , async
                     , containers
                     , directory
                     , lens
                     , mtl
                     , pipes
                     , pipes-concurrency
                     , process
                     , text
                     , unix
                     , vgrep
                     , vty >= 5.4.0
  default-language:    Haskell2010

test-suite vgrep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Text.Lazy.Testable
                     , Test.Case
                     , Test.Vgrep.Widget
                     , Test.Vgrep.Widget.Pager
                     , Test.Vgrep.Widget.Results
                     , Vgrep.Environment.Testable
                     , Vgrep.Widget.Pager.Testable
                     , Vgrep.Widget.Results.Testable
  build-depends:       base
                     , containers
                     , lens
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , text
                     , vgrep
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base, doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fmthoma/vgrep
