name:                vgrep
version:             0.1.4.0
synopsis:            A pager for grep
description:         
  @vgrep@ is a pager for navigating through @grep@ output.
  .
  Usage:
  .
  > grep -rn foo | vgrep
  > vgrep foo /some/path
  > vgrep foo /some/path | vgrep bar
  .
  <<https://raw.githubusercontent.com/fmthoma/vgrep/master/vgrep.png>>
homepage:            http://github.com/fmthoma/vgrep#readme
license:             BSD3
license-file:        LICENSE
author:              Franz Thoma
maintainer:          franz.thoma@tngtech.com
copyright:           2016 Franz Thoma
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  LambdaCase
                     , MultiWayIf
  exposed-Modules:     Control.Concurrent.STM.TPQueue
                     , Control.Monad.State.Extended
                     , Pipes.Concurrent.PQueue
                     , Vgrep.App
                     , Vgrep.Environment
                     , Vgrep.Environment.Config
                     , Vgrep.Event
                     , Vgrep.Parser
                     , Vgrep.Results
                     , Vgrep.System.Grep
                     , Vgrep.Text
                     , Vgrep.Type
                     , Vgrep.Widget
                     , Vgrep.Widget.HorizontalSplit
                     , Vgrep.Widget.HorizontalSplit.Internal
                     , Vgrep.Widget.Pager
                     , Vgrep.Widget.Pager.Internal
                     , Vgrep.Widget.Results
                     , Vgrep.Widget.Results.Internal
                     , Vgrep.Widget.Type
  build-depends:       base >= 4.7 && < 5
                     , async              >= 2.0.2
                     , attoparsec         >= 0.12.1.6
                     , containers         >= 0.5.6.2
                     , fingertree         >= 0.1.1
                     , lens               >= 4.13
                     , lifted-base        >= 0.2.3.6
                     , mmorph             >= 1.0.4
                     , mtl                >= 2.2.1
                     , pipes              >= 4.1.6
                     , pipes-concurrency  >= 2.0.3
                     , process            >= 1.2.3
                     , stm                >= 2.4.4
                     , text               >= 1.2.1.3
                     , transformers       >= 0.4.2
                     , unix               >= 2.7.1
                     , vty                >= 5.4.0
  default-language:    Haskell2010

executable vgrep
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  LambdaCase
                     , MultiWayIf
  build-depends:       base >= 4.8 && < 5
                     , async              >= 2.0.2
                     , cabal-file-th      >= 0.2.3
                     , containers         >= 0.5.6.2
                     , directory          >= 1.2.2
                     , lens               >= 4.13
                     , mtl                >= 2.2.1
                     , pipes              >= 4.1.6
                     , pipes-concurrency  >= 2.0.3
                     , process            >= 1.2.3
                     , template-haskell   >= 2.10
                     , text               >= 1.2.1.3
                     , unix               >= 2.7.1
                     , vgrep
                     , vty                >= 5.4.0
  default-language:    Haskell2010

test-suite vgrep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Text.Lazy.Testable
                     , Test.Case
                     , Test.Vgrep.Widget
                     , Test.Vgrep.Widget.Pager
                     , Test.Vgrep.Widget.Results
                     , Vgrep.Environment.Testable
                     , Vgrep.Widget.Pager.Testable
                     , Vgrep.Widget.Results.Testable
  build-depends:       base
                     , containers
                     , lens
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , text
                     , vgrep
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base, doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fmthoma/vgrep
