name:                vgrep
version:             0.2.0.0
synopsis:            A pager for grep
description:         
  @vgrep@ is a pager for navigating through @grep@ output.
  .
  Usage:
  .
  > grep -rn foo | vgrep
  > vgrep foo /some/path
  > vgrep foo /some/path | vgrep bar
  .
  Use @hjkl@ or arrow keys to navigate, @Enter@ to view file, @q@ to quit.
  .
  <<https://raw.githubusercontent.com/fmthoma/vgrep/master/screenshot.gif>>
homepage:            http://github.com/fmthoma/vgrep#readme
license:             BSD3
license-file:        LICENSE
author:              Franz Thoma
maintainer:          franz.thoma@tngtech.com
copyright:           2016 Franz Thoma
category:            Web
build-type:          Simple
extra-source-files:  .stylish-haskell.yaml
                   , .travis.yml
                   , CHANGELOG.md
                   , README.md
                   , config.yaml.example
                   , help.txt
                   , screenshot.gif
                   , stack.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  LambdaCase
                     , MultiWayIf
  exposed-Modules:     Control.Concurrent.STM.TPQueue
                     , Control.Lens.Compat
                     , Control.Monad.State.Extended
                     , Pipes.Concurrent.PQueue
                     , Vgrep.Ansi
                     , Vgrep.Ansi.Parser
                     , Vgrep.Ansi.Type
                     , Vgrep.Ansi.Vty.Attributes
                     , Vgrep.App
                     , Vgrep.App.Internal
                     , Vgrep.Command
                     , Vgrep.Environment
                     , Vgrep.Environment.Config
                     , Vgrep.Environment.Config.Monoid
                     , Vgrep.Environment.Config.Sources
                     , Vgrep.Environment.Config.Sources.Env
                     , Vgrep.Environment.Config.Sources.File
                     , Vgrep.Event
                     , Vgrep.Key
                     , Vgrep.Parser
                     , Vgrep.Results
                     , Vgrep.System.Grep
                     , Vgrep.Text
                     , Vgrep.Type
                     , Vgrep.Widget
                     , Vgrep.Widget.HorizontalSplit
                     , Vgrep.Widget.HorizontalSplit.Internal
                     , Vgrep.Widget.Pager
                     , Vgrep.Widget.Pager.Internal
                     , Vgrep.Widget.Results
                     , Vgrep.Widget.Results.Internal
                     , Vgrep.Widget.Type
  build-depends:       base >= 4.7 && < 5
                     , aeson              >= 0.11 || (>= 0.9 && < 0.10)
                     , async              >= 2.0.2
                     , attoparsec         >= 0.12.1.6
                     , containers         >= 0.5.6.2
                     , directory          >= 1.2.2
                     , fingertree         >= 0.1.1
                     , generic-deriving   >= 1.5.0
                     , lens               >= 4.13
                     , lifted-base        >= 0.2.3.6
                     , mmorph             >= 1.0.4
                     , mtl                >= 2.2.1
                     , pipes              >= 4.1.6
                     , pipes-concurrency  >= 2.0.3
                     , process            >= 1.2.3
                     , stm                >= 2.4.4
                     , text               >= 1.2.1.3
                     , transformers
                     , unix               >= 2.7.1
                     , vty                >= 5.4.0
                     , yaml               >= 0.8.12
  default-language:    Haskell2010

executable vgrep
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  LambdaCase
                     , MultiWayIf
  build-depends:       base >= 4.7 && < 5
                     , async              >= 2.0.2
                     , cabal-file-th      >= 0.2.3
                     , containers         >= 0.5.6.2
                     , directory          >= 1.2.2
                     , lens               >= 4.13
                     , mtl                >= 2.2.1
                     , pipes              >= 4.1.6
                     , pipes-concurrency  >= 2.0.3
                     , process            >= 1.2.3
                     , template-haskell   >= 2.10
                     , text               >= 1.2.1.3
                     , vgrep
                     , vty                >= 5.4.0
  default-language:    Haskell2010

test-suite vgrep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Text.Testable
                     , Test.Case
                     , Test.Vgrep.Widget
                     , Test.Vgrep.Widget.Pager
                     , Test.Vgrep.Widget.Results
                     , Vgrep.Environment.Testable
                     , Vgrep.Widget.Pager.Testable
                     , Vgrep.Widget.Results.Testable
  build-depends:       base
                     , containers
                     , lens
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , text
                     , vgrep
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base, doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fmthoma/vgrep
